<resources>
    <string name="app_name">Nami空探</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="dev_name">home</string>
    <string name="dev_mac">FF:FF:FF:FF:FF</string>
    <string name="no_device">您还未添加设备</string>
    <string name="no_wifi">您还未连接WiFi</string>
    <string name="connect_net">Answer: 下载APP、长按WiFI键、绑定设备</string>
    <string name="net1">1. 扫描说明书、包装上的二维码即可下载APP</string>
    <string name="net2">2. 确保路由器处于2.4G工作频段，Nami空探不支持5G</string>
    <string name="net3">3. 使用手机连接到目标路由器</string>
    <string name="net4">4. 点击APP主页右下角的 ＋ ; 出现‘添加设备的界面；点击 开始添加 按钮；输入手机已经连接的wifi密码</string>
    <string name="net5">5. 设备连接成功后，会出现提示信息</string>
    <string name="findNoDev">暂未发现设备</string>

    <string name="url_login">http://210.30.100.172:8671/api/accounts/login</string>
    <string name="url_regist">http://210.30.100.172:8671/api/accounts/register</string>
    <string name="url_logout">http://210.30.100.172:8671/api/accounts/logout</string>
    <string name="url_pipe">http://210.30.100.172:8671/api/pipe</string>
    <string name="severIP">http://210.30.100.172:8671</string>
</resources>
